fix:  added an sub-menu in the dynamic PDF area for pages that have emdedded pdf links.  this does not display on mobile devices.  closes#20

--- a/src/styles/pdf-controls.css
+++ b/src/styles/pdf-controls.css
@@ -2,6 +2,7 @@
 
 /* --- Hamburger Menu Toggle Button (#pdf-links-menu-toggle) --- */
 #pdf-links-menu-toggle {
+    display:none;
     margin-left: auto;
     
     /* Basic styling for appearance */
